# PaperGraph

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
nodify/: README.md  pyproject.toml
nodify/comparison/: RESULTS.md  fidelity.py  methodology-only-skill.md  report.html  results.json  score.py
nodify/comparison/blinded/: Article-1.md  Article-2.md  Article-3.md
nodify/comparison/handoff/: raw_artifact.txt  skills_artifact.txt  tree_artifact.txt
nodify/comparison/runs/raw/: article.md
nodify/comparison/runs/raw/sources/: S1.txt  S2.txt  S3.txt  S4.txt  S5.txt  S6.txt  S7.txt  S8.txt
nodify/comparison/runs/skills/: article.md
nodify/comparison/runs/skills/sources/: S1.txt  S2.txt  S3.txt  S4.txt  S5.txt  S6.txt  S7.txt  S8.txt  S9.txt
nodify/comparison/runs/tree/: article.md
nodify/comparison/runs/tree/sessions/cmp/: session.json
nodify/comparison/runs/tree/sessions/cmp/article/: S-05.md  records.jsonl
nodify/comparison/runs/tree/sessions/cmp/docs/: index.jsonl
nodify/docs/: 00-design.md  02-m0-walkthrough.md  03-v2-design.md  04-v3-design.md  05-live-test-1.md  06-live-test-2.md  07-roadmap.md  08-test-cases.md  09-iter1.md
nodify/dogfood/: ai-jobs-export.md
nodify/dogfood/sessions/ai-jobs/: session.json
nodify/dogfood/sessions/ai-jobs-paper/: session.json
nodify/dogfood/sessions/ai-jobs-paper/article/: S-01.md  S-02.md  S-03.md  S-04.md  S-05.md  S-06.md  final.md  records.jsonl
nodify/dogfood/sessions/ai-jobs-paper/docs/: index.jsonl
nodify/dogfood/sessions/ai-jobs-paper/docs/store/: DOC-0003.txt  DOC-0005.txt  DOC-0008.txt  DOC-0010.txt  DOC-0011.txt
nodify/dogfood/sessions/ai-jobs-paper/notes/: n0002_gpts_are_gpts_arxiv.txt  n0002_oecd_occupation_exposure.txt  n0004_linkedin_lightcast_ai_jobs.txt  n0005_challenger_gray_ai_layoffs_2026-03.txt  n0010_card_kluve_weber_almp_metaanalysis.txt
nodify/dogfood/sessions/ai-jobs-paper/tree/: events.jsonl  nodes.jsonl  syntheses.jsonl
nodify/dogfood/sessions/ai-jobs/tree/: events.jsonl  nodes.jsonl  syntheses.jsonl
nodify/skill/: SKILL.md
nodify/src/nodify/: __init__.py  article.py  brief.py  checks.py  cli.py  clock.py  docsdb.py  errors.py  events.py  export.py  ids.py  paths.py  schemas.py  session.py  store.py  tree.py
nodify/src/nodify/schemas/: article.outline.v1.schema.json  article.section.v1.schema.json  docs.entry.v1.schema.json  envelope.v1.schema.json  event.v1.schema.json  node.v1.schema.json  recall.result.v1.schema.json  session.v1.schema.json  synthesis.v1.schema.json  synthesis.v2.schema.json
nodify/tests/: conftest.py  test_adversarial.py  test_article.py  test_brief.py  test_check.py  test_cli.py  test_docs.py  test_events.py  test_iter1.py  test_recall_bench.py  test_scale.py  test_schemas.py  test_tree.py
(+377 files in other folders)
