[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nodify"
version = "0.1.0"
description = "Deep research off the long-context treadmill: logic and evidence distilled into a durable node tree"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
nd = "nodify.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nodify = ["schemas/*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
